# NX-Tool

./: .gitignore  CHANGES.md  NOTICE  README.md  REVERSE_ENGINEERING.md  build.gradle  settings.gradle
.github/workflows/: build.yml  inject.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Main.cpp
app/src/main/cpp/Gui/: Gui.cpp  Gui.hpp
app/src/main/cpp/Hook/: EglHook.cpp  EglHook.hpp  HookManager.cpp  HookManager.hpp  InputHook.cpp  InputHook.hpp
app/src/main/cpp/Module/: Module.hpp  ModuleManager.cpp  ModuleManager.hpp
app/src/main/cpp/Module/Modules/: Esp.cpp  Esp.hpp  Fly.cpp  Fly.hpp  KillAura.cpp  KillAura.hpp  NoFall.cpp  NoFall.hpp  Speed.cpp  Speed.hpp
app/src/main/cpp/Sdk/: GameSymbols.cpp  GameSymbols.hpp  Minecraft.cpp  Minecraft.hpp  Offsets.hpp  Signatures.hpp
app/src/main/cpp/Utils/: Logger.hpp  Memory.cpp  Memory.hpp
app/src/main/java/com/nxteam/nxtool/: FeatureRegistry.kt  MainActivity.kt  McDetector.kt  MenuActivity.kt  ModuleRegistry.kt  OverlayService.kt  PacketInspectorActivity.kt  PacketLog.kt  RelayActivity.kt  RelayManager.kt  UiKit.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
patcher/: inject.py  requirements.txt
